--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/colorWhite"
+        android:background="@color/colorBlack"
         app:itemIconTint="@color/colorOrange"
         app:itemTextColor="@color/colorOrange"
         app:menu="@menu/bottom_navigation_main">
