--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -33,7 +33,7 @@
         android:id="@+id/iv_product"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"
-        android:src="@drawable/loginlogo"
+        android:src="@drawable/placeholder"
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_14sdp"
         app:layout_constraintStart_toStartOf="parent"
@@ -161,6 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="end"
+                android:text="000"
                 android:textColor="@color/colorBlue1"/>
 
         </LinearLayout>
