--- a/app/src/main/res/layout/fragment_go_trip_details.xml
+++ b/app/src/main/res/layout/fragment_go_trip_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".PlanTripFragment">
-
+    
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/tv_title"
@@ -29,46 +29,49 @@
         android:src="@drawable/getready"
         android:layout_marginTop="@dimen/_28sdp"/>
 
-    <TextView
-        android:id="@+id/tv_desc"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginStart="@dimen/_32sdp"
-        android:layout_marginEnd="@dimen/_32sdp"
-        app:layout_constraintTop_toBottomOf="@+id/iv_trip"
-        android:textSize="@dimen/_16ssp"
-        android:textColor="@color/colorGray1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/get_ready_for_trip" />
 
     <Button
         android:id="@+id/bt_go_to_trip"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="@string/go_trip_details"
-        android:backgroundTint="@color/colorBlue1"
+        android:layout_marginTop="50dp"
         android:background="@drawable/shap_btn"
+        android:backgroundTint="@color/colorBlue1"
+        android:text="@string/go_trip_details"
+        android:textAlignment="center"
         android:textColor="@color/colorWhite"
-        android:layout_marginTop="@dimen/_32sdp"
-        app:layout_constraintStart_toStartOf="@id/tv_desc"
-        app:layout_constraintEnd_toEndOf="@+id/tv_desc"
-        app:layout_constraintTop_toBottomOf="@+id/tv_desc"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/remaining_time" />
 
     <TextView
         android:id="@+id/state_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="45dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="307dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/bt_go_to_trip"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.119"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_desc" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_trip"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/remaining_time"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/state_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
