--- a/app/src/main/res/layout/fragment_new_product_step_one.xml
+++ b/app/src/main/res/layout/fragment_new_product_step_one.xml
@@ -16,6 +16,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+   <!-- <Button
+        android:id="@+id/img_pick_btn"
+        style="@style/Base.Widget.AppCompat.Button.Colored"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text=""
+        android:shadowRadius="@integer/google_play_services_version"
+        android:backgroundTint="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="@+id/iv_product"
+        app:layout_constraintEnd_toEndOf="@+id/iv_product"
+        app:layout_constraintStart_toStartOf="@+id/iv_product"
+        app:layout_constraintTop_toTopOf="@+id/iv_product" />-->
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,11 +45,11 @@
         android:id="@+id/iv_product"
         android:layout_width="@dimen/_100sdp"
         android:layout_height="@dimen/_100sdp"
-        android:src="@drawable/loginlogo"
-        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginStart="@dimen/_14sdp"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:src="@drawable/placeholder"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_arrow"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_arrow" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/tv_product_title"
@@ -68,6 +81,10 @@
         android:id="@+id/tv_spinner"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:shadowColor="@color/ef_grey"
+        android:shadowDy="@integer/google_play_services_version"
+        android:shadowDx="@integer/google_play_services_version"
+        android:shadowRadius="@integer/google_play_services_version"
         android:background="@android:color/transparent"
         android:textColor="@color/colorBlack"
         android:text="@string/choose_category"
@@ -137,7 +154,7 @@
                     android:id="@+id/iv_store"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="@dimen/_60sdp"
-                    android:src="@drawable/loginlogo"
+                    android:src="@drawable/placeholder"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -158,10 +175,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="@string/checkout"
+                    tools:text="(click to add product)"
+                    android:textSize="@dimen/_9sdp"
                     app:layout_constraintStart_toEndOf="@+id/iv_store"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    android:textColor="@color/colorGray"
+                    android:textColor="@color/ef_grey"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_10sdp"
                     />
