--- a/app/src/main/res/layout/fragment_new_product_step_one.xml
+++ b/app/src/main/res/layout/fragment_new_product_step_one.xml
@@ -142,89 +142,67 @@
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_weight="3"
-            android:background="#F1F1F1"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/card_background">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2">
+                android:background="#f2f2f2">
 
                 <ImageView
                     android:id="@+id/iv_store"
                     android:layout_width="@dimen/_60sdp"
                     android:layout_height="@dimen/_60sdp"
                     android:src="@drawable/placeholder"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
                 <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/checkout"
-                    app:layout_constraintStart_toEndOf="@+id/iv_store"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textColor="@color/colorGray"
-                    android:layout_marginTop="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_10sdp"
-                    />
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:text="@string/checkout"
+                    android:textColor="@color/colorGray"
+                    app:layout_constraintStart_toEndOf="@+id/iv_store"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="(click to add product)"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintStart_toEndOf="@+id/iv_store"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:textColor="@color/ef_grey"
-                    android:layout_marginBottom="@dimen/_10sdp"
                     android:layout_marginStart="@dimen/_10sdp"
-                    />
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:textColor="@color/ef_grey"
+                    android:textSize="@dimen/_9sdp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/iv_store"
+                    tools:text="(click to add product)" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/light_round_shap_btn"
-            android:backgroundTint="@color/colorBlue1"
-            android:padding="@dimen/_10sdp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_weight="0">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_calender"
-                android:tint="@color/colorWhite" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/change"
-                android:textColor="@color/colorWhite"
-                />
-        </LinearLayout>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/bt_add_product"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_product"
         android:backgroundTint="@color/colorBlue1"
         android:background="@drawable/shap_btn"
         android:textColor="@color/colorWhite"
         android:layout_marginTop="@dimen/_26sdp"
+        android:layout_marginStart="@dimen/_14sdp"
+        android:layout_marginEnd="@dimen/_14sdp"
+
         app:layout_constraintStart_toStartOf="@id/ll"
         app:layout_constraintEnd_toEndOf="@+id/ll"
         app:layout_constraintTop_toBottomOf="@id/ll"/>
