--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -10,13 +10,14 @@
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
         android:layout_weight="2"
-        android:background="#F1F1F1"
+        android:background="@drawable/card_grey_background"
         android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_store"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#f2f2f2"
             android:layout_weight="2">
 
             <ImageView
@@ -44,7 +45,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/checkout"
+                android:text="(click to add product)"
                 app:layout_constraintStart_toEndOf="@+id/iv_store"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:textColor="@color/colorGray"
