place orders and update address

--- a/app/src/main/res/layout/item_address.xml
+++ b/app/src/main/res/layout/item_address.xml
@@ -10,14 +10,13 @@
         android:id="@+id/iv_icon"
         android:layout_width="@dimen/_20sdp"
         android:layout_height="@dimen/_20sdp"
-        android:src="@drawable/ic_check_circle"/>
+        />
 
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_14sdp"
-        tools:text="Ahmms"/>
+        android:layout_marginStart="@dimen/_14sdp" />
 
 </LinearLayout>
