--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -218,8 +218,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:drawableLeft="@drawable/addexpense"
-            android:text="  Add Address"
+            android:text=" + Add Address"
             android:textColor="@color/colorBlue1"/>
 
     </LinearLayout>
@@ -408,7 +407,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/bt_add_product"
+        android:id="@+id/bt_place_order"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="PLACE ORDER"
