design, navigation, bug fixing

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/loginlogo"
-        android:layout_margin="@dimen/_26sdp"/>
+        />
 
 
     <ImageView
@@ -76,7 +76,7 @@
         app:layout_constraintEnd_toEndOf="@+id/tv_login"
         app:layout_constraintTop_toBottomOf="@+id/et_email"/>
 
-    <TextView
+    <!-- <TextView
         android:id="@+id/tv_forgot_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
         android:layout_marginTop="@dimen/_14sdp"
         app:layout_constraintStart_toStartOf="@id/tv_login"
         app:layout_constraintEnd_toEndOf="@+id/tv_login"
-        app:layout_constraintTop_toBottomOf="@+id/et_password"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_password"/>-->
 
     <Button
         android:id="@+id/bt_login"
@@ -97,7 +97,7 @@
         android:layout_marginTop="@dimen/_16sdp"
         app:layout_constraintStart_toStartOf="@id/tv_login"
         app:layout_constraintEnd_toEndOf="@+id/tv_login"
-        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password"/>
+        app:layout_constraintTop_toBottomOf="@+id/et_password"/>
 
     <TextView
         android:id="@+id/tv_login_social"
