--- a/app/src/main/res/drawable/card_grey_background.xml
+++ b/app/src/main/res/drawable/card_grey_background.xml
@@ -14,7 +14,7 @@
         android:top="0dp"
         android:bottom="2dp">
         <shape android:shape="rectangle">
-            <solid android:color="#BDBDBD"/>
+            <solid android:color="#f2f2f2"/>
             <corners android:radius="5dp"/>
         </shape>
     </item>
