--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <fragment
-        android:id="@+id/navigation_trip"
+        android:id="@+id/main_navigation"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         app:defaultNavHost="true"
@@ -15,10 +15,10 @@
         app:layout_constraintBottom_toTopOf="@id/bottom_nv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_height="0dp"
-        app:navGraph="@navigation/trip_navigation" />
+        android:layout_height="0dp"/>
 
 
+    <!--app:navGraph="@navigation/trip_navigation"-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nv"
         android:layout_width="match_parent"
