--- a/app/src/main/res/layout/fragment_add_trip.xml
+++ b/app/src/main/res/layout/fragment_add_trip.xml
@@ -151,16 +151,16 @@
         android:layout_marginTop="@dimen/_28sdp" />
 
     <TextView
+        android:id="@+id/tv_termsandconditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ll_dates"
-        app:layout_constraintStart_toEndOf="@+id/cb_terms"
         android:layout_marginStart="@dimen/_4sdp"
-        android:layout_marginEnd="@dimen/_14sdp"
-        android:layout_marginTop="@dimen/_32sdp"
-        android:textSize="@dimen/_12ssp"
+        android:text="@string/terms_conditions"
         android:textColor="@color/colorBlue1"
-        android:text="@string/terms_conditions"/>
+        android:textSize="@dimen/_12ssp"
+        app:layout_constraintBottom_toBottomOf="@+id/cb_terms"
+        app:layout_constraintStart_toEndOf="@+id/cb_terms"
+        app:layout_constraintTop_toTopOf="@+id/cb_terms" />
 
     <Button
         android:id="@+id/bt_add_trip"
