--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -123,13 +123,13 @@
 
     <TextView
         android:id="@+id/tv_returnsIn"
-        android:layout_width="222dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:singleLine="true"
         android:textColor="@color/colorGray2"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_fly"
-        app:layout_constraintEnd_toStartOf="@+id/iv_brand_icon"
         app:layout_constraintStart_toEndOf="@+id/iv_fly"
         tools:text="Returns in 3 days" />
 
